--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<title>Document</title>
 	<script src="http://code.angularjs.org/1.2.13/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
+		<script src="https://cdn.firebase.com/libs/angularfire/2.0.2/angularfire.min.js"></script>
     <script src="app.js"></script>
-    <!-- <script type="text/javascript" src="controller/bootstrap.min.css"></script> -->
 </head>
 <body ng-app="myApp">
 <div >
@@ -15,5 +16,14 @@
 
 </body>
  	 <script src="controller/demo_ctrl.js"></script>
-<script src="controller/demo1_ctrl.js"></script>
+	<script src="controller/demo1_ctrl.js"></script>
+	<script>
+	var config = {
+	apiKey: "AIzaSyDX6XXUyTcnOWEZOFj3uykILKJfYOtIzYw",
+	authDomain: "example-3823d.firebaseapp.com",
+	databaseURL: "https://example-3823d.firebaseio.com/",
+	storageBucket: "example-3823d.appspot.com",
+};
+firebase.initializeApp(config);
+	</script>
 </html>
