--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<script src="http://code.angularjs.org/1.2.13/angular.js"></script>
+	<script src="https://code.angularjs.org/1.2.13/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
 		<script src="https://cdn.firebase.com/libs/angularfire/2.0.2/angularfire.min.js"></script>
